# obs-client

./: ARCHITECTURE.md  Cargo.toml  README.md  config.toml
.github/workflows/: ci.yml
src/: config.rs  config.toml  main.rs
src/cli/: mod.rs
src/domain/: capture.rs  config.rs  container.rs  encoder.rs  mod.rs  resolution.rs
src/engine/: mod.rs
