[package]
name = "obs-client"
version = "0.1.0"
edition = "2024"

[package.metadata]
libobs-version = "32.0.2"
libobs-cache-dir ="./obs-build"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
thiserror = "1"

tokio = { version = "1", features = ["full"] }
anyhow = "1.0"

# OBS library bindings are complex and have platform-specific issues
# For now, we'll stub out the engine module to get the project building
# and implement the actual OBS integration later with proper FFI bindings

